--- a/_extensions/content-switcher/content-switcher.css
+++ b/_extensions/content-switcher/content-switcher.css
@@ -53,7 +53,6 @@
   display: none !important;
 }
 
-/* Comment out to remove background */
 /* Shared styling for all visible content switchers */
 .content-switcher:not(.content-switcher-hidden) {
   background-color: color-mix(in srgb, var(--content-switcher-tint) 25%, #FFFFFF 75%);
@@ -64,7 +63,7 @@
 div.content-switcher:not(.content-switcher-hidden),
 section.content-switcher:not(.content-switcher-hidden) {
   border-radius: 16px;
-  padding: .75rem 1rem .75rem 1rem;
+  padding: .75rem 1rem;
   margin: 0.5rem 0;
 }
 
@@ -79,7 +78,7 @@ span.content-switcher:not(.content-switcher-hidden) {
   background-color: #1C2F3D; /*Mix of Posit Dark Blue 2 and Dark Blue 3*/
   border: 1px solid #213D4F;
   border-radius: 16px;
-  padding: .25rem 1rem .25rem 1rem;
+  padding: .25rem 1rem;
 }
 
 .quarto-dark span.content-switcher:not(.content-switcher-hidden) {
